[tool.poetry]
name = "pdgraster"
version = "0.9.3"
description = "Geospatial data rasterization workflow"
authors = [
    "Robyn Thiessen-Bock <thiessenbock@nceas.ucsb.edu>",
    "Juliet Cohen <jcohen@nceas.ucsb.edu>",
    "Lauren Walker <walker@nceas.ucsb.edu>",
    "Matthew B. Jones <jones@nceas.ucsb.edu>",
]
license = "Apache Software License 2.0"
readme = "README.md"
repository = "https://github.com/PermafrostDiscoveryGateway/viz-raster"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.2"
shapely = ">= 2, < 3.0"
geopandas = ">= 0.12.2, < 1.0"
morecantile = ">= 3.1, < 4.0"
Rtree = ">= 0.9, < 1.0"
coloraide = ">= 0.10, < 1"
colormaps = "== 0.4.0"
Pillow = ">= 9"
rasterio = "1.3.8"
pdgstaging = { git = "https://github.com/PermafrostDiscoveryGateway/viz-staging.git", branch = "develop" }
pydantic = "1.10.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
ruff = ">=0.2.1"
pre-commit = ">=3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Allow fixing of all errors that can be safely fixed
fix = true
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # Line length
    "B904",  # Raise from
    "B006",  # Mutable defaults
    "B028",  # No stacklevel
    "B008",  # Function calls in defaults
]